// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLink component renders correctly if link is active 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor="moop"
    depth={0}
    hash="moop"
    sub={Array []}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative sb-item  sb-item-active"
        >
          <a
            className="block white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>
        </li>,
        Array [],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="block white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>,
          "className": "mb1 relative sb-item  sb-item-active",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "link text",
            "className": "block white text-decoration-none truncate",
            "href": "#moop",
          },
          "ref": null,
          "rendered": "link text",
          "type": "a",
        },
        "type": "li",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative sb-item  sb-item-active"
          >
            <a
              className="block white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>
          </li>,
          Array [],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="block white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>,
            "className": "mb1 relative sb-item  sb-item-active",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "block white text-decoration-none truncate",
              "href": "#moop",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          "type": "li",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders correctly in the default case 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor={null}
    depth={0}
    hash={null}
    sub={Array []}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative sb-item  sb-item-active"
        >
          <a
            className="block white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>
        </li>,
        Array [],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="block white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>,
          "className": "mb1 relative sb-item  sb-item-active",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "link text",
            "className": "block white text-decoration-none truncate",
            "href": "#!",
          },
          "ref": null,
          "rendered": "link text",
          "type": "a",
        },
        "type": "li",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative sb-item  sb-item-active"
          >
            <a
              className="block white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>
          </li>,
          Array [],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="block white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>,
            "className": "mb1 relative sb-item  sb-item-active",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "block white text-decoration-none truncate",
              "href": "#!",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          "type": "li",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders link correctly if an anchor is given 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor="moop"
    depth={0}
    hash={null}
    sub={Array []}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative sb-item  "
        >
          <a
            className="block white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>
        </li>,
        Array [],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="block white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>,
          "className": "mb1 relative sb-item  ",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "link text",
            "className": "block white text-decoration-none truncate",
            "href": "#moop",
          },
          "ref": null,
          "rendered": "link text",
          "type": "a",
        },
        "type": "li",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative sb-item  "
          >
            <a
              className="block white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>
          </li>,
          Array [],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="block white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>,
            "className": "mb1 relative sb-item  ",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "block white text-decoration-none truncate",
              "href": "#moop",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          "type": "li",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
